src/App.css
body {
  padding-top:20px;
  background-color:#9fff9f !important;
}
.App {
  margin:0 auto;
  text-align: center;
}

.App-logo {
  height: 40vmin;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #09d3ac;
}

.App p {
  margin:0;
}
/* Board */
.App h1{
  margin-bottom:20px; 
}
.Board {
  display:flex;
  flex-direction: column;
  align-items: center;
}

.topPart {
  display:flex;
  flex-direction: column;
  align-items:center;
}
.Diceplacement {
  display:flex;
  /* width:400px; */
  justify-content: space-around;
  align-items: center;
  margin-bottom:20px;
}

.scoreBoard {
  display:flex;
}

.throws {
  height:50px;
}
.refreshButton{
  margin-left:10px;
}

/* Dice */
.Dice {
  border:2px solid black;
}

.DiceLocked {
  border:2px solid black;
  -webkit-box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.40);
  -moz-box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.40);
  box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.40);
}



.DiceText {
  font-weight:bold;
  font-size:2em;
}

.refreshButton {
  width:50px;
  height:50px;
}
.refreshButton:hover {
  cursor:pointer;
}

.scoringTable {
  margin-top:20px;
}
.scoringTable table {
  background-color:white;
}
.scoringTable td:nth-of-type(2){
  width:350px;
}

.scoringTable td, .scoringTable th, .scoringTable tr, .scoringTable .table thead, .scoringTable .table thead tr{
  border:2px solid black !important;
}

div .errorMessage {
  font-weight: bold;
  color:red;
  font-size:25px;
  padding:5px 10px;
  border:2px solid red;
  margin-top:20px;
}


/* Dice */
/* work in progress : making dice in css */ 
.cssDice {
  width:84px;
  height:84px;
  margin:15px;
  border-radius: 10px;
  display:flex;
  justify-Content:center;
  align-Items:center;
  cursor:pointer;
  position:relative;
  background-color:white;
}
.dice6 div:nth-of-type(1){
  width:20px;
  height:20px;
  border-radius:50%;
  background-color:red;
  position: absolute;
  top:5px;
  left:5px;
  -webkit-box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
  -moz-box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
  box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
}
.dice6 div:nth-of-type(2){
  width:20px;
  height:20px;
  border-radius:50%;
  background-color:red;
  position: absolute;
  top:5px;
  right:5px;
  -webkit-box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
  -moz-box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
  box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
}
.dice6 div:nth-of-type(3){
  width:20px;
  height:20px;
  border-radius:50%;
  background-color:red;
  position: absolute;
  top:30px;
  left:5px;
  -webkit-box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
  -moz-box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
  box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
}
.dice6 div:nth-of-type(4){
  width:20px;
  height:20px;
  border-radius:50%;
  background-color:red;
  position: absolute;
  top:30px;
  right:5px;
  -webkit-box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
  -moz-box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
  box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
}
.dice6 div:nth-of-type(5){
  width:20px;
  height:20px;
  border-radius:50%;
  background-color:red;
  position: absolute;
  bottom:5px;
  left:5px;
  -webkit-box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
  -moz-box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
  box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
}
.dice6 div:nth-of-type(6){
  width:20px;
  height:20px;
  border-radius:50%;
  background-color:red;
  position: absolute;
  bottom:5px;
  right:5px;
  -webkit-box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
  -moz-box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
  box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
}


/* -----------------------  DICE 5  -------------------------- */ 


.dice5 div:nth-of-type(1){
  width:20px;
  height:20px;
  border-radius:50%;
  background-color:red;
  position: absolute;
  top:5px;
  left:5px;
  -webkit-box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
  -moz-box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
  box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
}
.dice5 div:nth-of-type(2){
  width:20px;
  height:20px;
  border-radius:50%;
  background-color:red;
  position: absolute;
  top:5px;
  right:5px;
  -webkit-box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
  -moz-box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
  box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
}
.dice5 div:nth-of-type(3){
  width:20px;
  height:20px;
  border-radius:50%;
  background-color:red;
  position: absolute;
  top:30px;
  left:30px;
  -webkit-box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
  -moz-box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
  box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
}
.dice5 div:nth-of-type(4){
  width:20px;
  height:20px;
  border-radius:50%;
  background-color:red;
  position: absolute;
  bottom:5px;
  left:5px;
  -webkit-box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
-moz-box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
}
.dice5 div:nth-of-type(5){
  width:20px;
  height:20px;
  border-radius:50%;
  background-color:red;
  position: absolute;
  bottom:5px;
  right:5px;
  -webkit-box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
  -moz-box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
  box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
}


/* -----------------------  DICE 4  -------------------------- */ 


.dice4 div:nth-of-type(1){
  width:20px;
  height:20px;
  border-radius:50%;
  background-color:red;
  position: absolute;
  top:5px;
  left:5px;
  -webkit-box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
  -moz-box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
  box-shadow: inset 0px 2px 2px 0px rgba(0,0,0,0.46);
}
/* ... */

